@@ -18,7 +18,7 @@
   }
 
   .issue-meta {
-    margin-left: 65px
+    display: inline-block;
   }
 }
 
