@@ -5,8 +5,32 @@
 = render "header_title"
 
 .issue
-  .detail-page-header
-    .pull-right
+  .detail-page-header.issuable-header
+    .pull-left
+      .status-box{ class: "status-box-closed #{issue_button_visibility(@issue, false)}"}
+        %span.hidden-xs
+          Closed
+        %span.hidden-sm.hidden-md.hidden-lg
+          =icon('check')
+      .status-box{ class: "status-box-open #{issue_button_visibility(@issue, true)}"}
+        %span.hidden-xs
+          Open
+        %span.hidden-sm.hidden-md.hidden-lg
+          =icon('circle-o')
+
+    .issue-meta
+      %strong.identifier
+        Issue ##{@issue.iid}
+      %span.creator
+        by
+        .editor-details
+          %strong
+            =link_to_member(@project, @issue.author, size: 24, mobile_classes: "hidden-xs")
+            =link_to_member(@project, @issue.author, size: 24,
+              by_username: true, avatar: false)
+          = time_ago_with_tooltip(@issue.created_at, placement: 'bottom', html_class: 'issue_created_ago')
+
+    .pull-right.issue-btn-group
       - if can?(current_user, :create_issue, @project)
         = link_to new_namespace_project_issue_path(@project.namespace, @project), class: 'btn btn-nr btn-grouped new-issue-link btn-success', title: 'New issue', id: 'new_issue_link' do
           = icon('plus')
@@ -19,19 +43,6 @@
           = icon('pencil-square-o')
           Edit
 
-    .pull-left
-      .status-box{ class: "status-box-closed #{issue_button_visibility(@issue, false)}"} Closed
-      .status-box{ class: "status-box-open #{issue_button_visibility(@issue, true)}"} Open
-
-    .issue-meta
-      %span.identifier
-        Issue ##{@issue.iid}
-      %span.creator
-        &middot;
-        by #{link_to_member(@project, @issue.author, size: 24)}
-        = '@' + @issue.author.username
-        &middot;
-        = time_ago_with_tooltip(@issue.created_at, placement: 'bottom', html_class: 'issue_created_ago')
 
   .issue-details.issuable-details
     .detail-page-description.content-block
